--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,6 +4,7 @@
 
 <body>
   <form
+    onsubmit="return validateSignupForm()"
     class="login_container"
     action="/resto/sign-up"
     method="POST"
@@ -27,6 +28,7 @@
           <input
             type="text"
             name="mb_nick"
+            class="mb_nick"
             placeholder="Foydalanuvchining ismi"
             value=""
             required
@@ -37,6 +39,7 @@
           <input
             type="text"
             name="mb_phone"
+            class="mb_phone"
             placeholder="Telefon raqam"
             value=""
             required
@@ -50,6 +53,7 @@
           <input
             type="password"
             name="mb_password"
+            class="mb_password"
             placeholder="passwordni kiriting"
             value=""
             required
@@ -60,6 +64,7 @@
           <input
             type="password"
             name="mb_confirm_password"
+            class="mb_confirm_password"
             placeholder="passwordni tasdiqlash"
             value=""
             required
@@ -78,13 +83,12 @@
                 value="Rasmni tanlang"
                 disabled="disabled"
               />
-              <label>Rasmni yuklash</label>
+              <label for="input_file">Rasm yuklash</label>
               <input
                 type="file"
                 id="input_file"
                 name="restaurant_img"
-                placeholder="Passwordni tasdiqlash"
-                class="upload-hidden form-control-file resaurant-img"
+                class="upload-hidden form-control-file restaurant_img"
               />
             </div>
             <p class="thumbnail_desc">
@@ -102,4 +106,60 @@
   </form>
 </body>
 
-<%- include('includes/footer') %>
+<script>
+  $(function () {
+    let fileTarget = $(".filebox .upload-hidden");
+    let filename = "";
+    fileTarget.on("change", function () {
+      if (window.FileReader) {
+        const uploading_file = $(this)[0].files[0];
+        const fileType = uploading_file["type"];
+        const validImageTypes = ["image/jpg", "image/jpeg", "image/png"];
+        if (!validImageTypes.includes(fileType)) {
+          alert(
+            "Iltimos ruhsat etilgan formatdagi rasmlarni yuklang: jpg, jpeg va png!"
+          );
+        } else {
+          if (uploading_file) {
+            console.log(URL.createObjectURL(uploading_file));
+            $(".upload_img_frame")
+              .attr("src", URL.createObjectURL(uploading_file))
+              .addClass("success");
+          }
+          filename = uploading_file.name;
+        }
+      }
+
+      $(this).siblings(".upload-name").val(filename);
+    });
+  });
+
+  function validateSignupForm() {
+    const mb_nick = $(".mb_nick").val();
+    const mb_phone = $(".mb_phone").val();
+    const mb_password = $(".mb_password").val();
+    const mb_confirm_password = $(".mb_confirm_password").val();
+    const restaurant_img = $(".restaurant_img").get(0).files[0] ?? null;
+
+    if (
+      mb_nick == "" ||
+      mb_phone == "" ||
+      mb_password == "" ||
+      mb_confirm_password == ""
+    ) {
+      alert("Iltimos hamma ma'lumotlarni kiriting1!");
+      return false;
+    } else if (mb_password !== mb_confirm_password) {
+      alert(`Iltimos passwordni to'g'ri kiriting!`);
+      return false;
+    }
+
+    if (!restaurant_img) {
+      alert("Iltimos rasmni yuklang!");
+    }
+
+    return true;
+  }
+</script>
+
+<%- include('includes/footer') %> s
