--- a/views/all-restaurants.ejs
+++ b/views/all-restaurants.ejs
@@ -60,6 +60,35 @@
       </div>
     </div>
   </div>
+
+
+  <script>
+
+    $(function() {
+
+      // manipualte restaurants top features
+
+    $(".mb_top").on('change', function(e) {
+      const id = e.target.id;
+      const mb_top = e.target.checked ? 'Y' : 'N';
+      
+
+      axios.post("/resto/all-restaurant/edit", {id: id, mb_top: mb_top})
+      .then(response => {
+        const result = response.data;
+        if(result.state === 'success') {
+          alert('Successfully Updated');
+        } else {
+          alert(result.message);
+        }
+      }).catch(err => console.log(err))
+
+    })
+
+    });
+
+  </script>
+
 </body>
 
 <%- include('includes/footer') %>
