fix: modifying router_bssr

--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -14,12 +14,11 @@
         <a class="nav-link" href="/brand/sign-up">Signup</a>
       </li>
       <li class="nav-item" style="cursor: pointer">
-        <a class="nav-link" href="/brand <% } else if(member.mb_type ===
-        'ADMIN') { %>
+        <a class="nav-link" href="/brand/login">Login</a>
       </li>
-
+      <% } else if(member.mb_type === 'ADMIN') { %>
       <li class="nav-item" style="cursor: pointer">
-        <a class="nav-link" href="/brand/all-brand">AllBrand</a>
+        <a class="nav-link" href="/brand/all-brand">AllResto</a>
       </li>
       <li
         class="nav-item"
