fix: modifying adminka design

--- a/views/all-brands.ejs
+++ b/views/all-brands.ejs
@@ -10,7 +10,7 @@
           <a class="nav-link active" href="/brand">Home</a>
         </li>
         <li class="nav-item" style="cursor: pointer">
-          <a class="nav-link" href="/brand/all-brand">AllBrand</a>
+          <a class="nav-link" href="/brand/all-brand">AllBrands</a>
         </li>
         <li class="nav-item" style="cursor: pointer">
           <a class="nav-link" href="/brand/logout">Logout</a>
@@ -21,16 +21,16 @@
     <div class="restaurant_menu_frame">
       <div class="restaurant_container">
         <div class="resto_table">
-          <span class="new_dish_txt"> Barcha Brendlar Ro'yhati </span>
+          <span class="new_dish_txt"> All Brands List </span>
 
           <table class="table table-hover table-sm">
             <thead class="thead-light">
               <tr class="thead-light">
                 <th scope="col">T/r</th>
-                <th scope="col">Brend nomi</th>
-                <th scope="col">Brend Telefon Raqami</th>
-                <th scope="col">Brend TOP</th>
-                <th scope="col">Brend Holati</th>
+                <th scope="col">Brand name</th>
+                <th scope="col">Brand Tel Number</th>
+                <th scope="col">Brand TOP</th>
+                <th scope="col">Brand Status</th>
               </tr>
             </thead>
 
