--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -3,11 +3,51 @@
   padding-bottom: 80px;
   width: 100%;
   height: auto;
-
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: #2c261e;
+
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  animation: gradient 15s ease infinite;
+  -webkit-animation: gradient 15s ease infinite;
+  background-size: 200% 200%;
+}
+
+#main_container {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  animation: gradient 15s ease infinite;
+  -webkit-animation: gradient 15s ease infinite;
+  background-size: 200% 200%;
+}
+
+@-webkit-keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.restaurant_menu_frame .restaurant_container {
+  width: 80%;
 }
 
 .restaurant_menu_frame .restaurant_menu_frame_container {
@@ -33,7 +73,7 @@
 
 .restaurant_container .resto_table {
   position: relative;
-  width: 85%;
+  width: 100%;
   height: auto;
   margin-top: 30px;
   display: flex;
