--- a/views/login-page.ejs
+++ b/views/login-page.ejs
@@ -6,29 +6,29 @@
   <form class="login_container" action="/brand/login" method="POST">
     <div class="login_frame" style="height: 460px">
       <div class="login_top">
-        <span>Saytga kirish</span>
+        <span>Enter</span>
         <div>
-          Bosh sahifaga qaytish <a href="/brand" style="color: #6440fb">Home</a>
+          Return to Homepage <a href="/brand" style="color: #6440fb">Home</a>
         </div>
         <p>
-          Ro'yhatdan o'tmaganmisiz?
-          <a href="/brand/sign-up" style="color: #6440fb">Ro'yhatdan o'tish</a>
+          Already registered?
+          <a href="/brand/sign-up" style="color: #6440fb">Signup</a>
         </p>
       </div>
 
       <div class="login_input_frame">
         <div class="login_input_container">
-          <label>Foydalanuvchining ismi: </label>
+          <label>User Name: </label>
           <input
             type="text"
             name="mb_nick"
-            placeholder="Foydalanuvchining ismi"
+            placeholder="username"
             value=""
             required
           />
         </div>
         <div class="login_input_container">
-          <label>Password kiriting: </label>
+          <label>Insert password: </label>
           <input
             type="password"
             name="mb_password"
@@ -39,7 +39,7 @@
         </div>
       </div>
 
-      <button class="login_btn btn" name="login" type="submit">Kirish</button>
+      <button class="login_btn btn" name="login" type="submit">Enter</button>
     </div>
   </form>
 </body>
