--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,7 +2,7 @@
 
 <link rel="stylesheet" type="text/css" href="/css/login.css" />
 
-<body>
+<body style="height: auto;">
   <form
     onsubmit="return validateSignupForm()"
     class="login_container"
@@ -10,7 +10,7 @@
     method="POST"
     enctype="multipart/form-data"
   >
-    <div class="login_frame" style="width: 650px; height: 730px">
+    <div class="login_frame" style="width: 650px; height: 730px; margin-top: 60px; margin-bottom: 60px;">
       <div class="login_top">
         <span>Signup</span>
         <div>
