--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -42,227 +42,253 @@
     </ul>
   </div>
 
-  <div id="canvas_container"></div>
+  <div class="wrapper">
+    <div class="left">
+      <div id="redmoon" class="scene red">
+        <div class="overlay"></div>
+        <div class="sky">
+          <div class="craters"></div>
+          <svg height="200" width="200">
+            <circle cx="100" cy="100" r="100" />
+          </svg> 
+        </div>
+        <div class="sea">
+          <div class="layerone"></div>
+          <div class="layertwo"></div>
+        </div>
+      </div>
+    </div>
+    <div class="right">
+      <h1 class="title">Crimson Moon</h1>
+    </div>
+  </div>
+  
 
-<!-- <button id="fullscr">Go Fullscreen</button> -->
+  <script>
+   $(document).ready(function() {
+	// Get height of sea
+	var seaHeight = Math.floor($('.sea').height());
 
-<script>
-  let renderer,
-scene,
-camera,
-sphereBg,
-nucleus,
-stars,
-controls,
-container = document.getElementById("canvas_container"),
-timeout_Debounce,
-noise = new SimplexNoise(),
-cameraSpeed = 0,
-blobScale = 3;
+	//Append water lines to the sea (First layer)
+	for(var i=0; i <= seaHeight; i++) {
+		(i%2 == 0)? lineClass = 'even': lineClass = 'odd';
+		$('.layerone').append(
+			'<svg height="2" width="50" class="water '+lineClass+'">'+
+			  '<polygon points="" class="waterline one"/>'+
+			'</svg>'
+		);
+	}
+	//Append water lines to the sea (Second layer)
+	for(var i=0; i <= seaHeight/10; i++) {
+		(i%2 == 0)? lineClass = 'even': lineClass = 'odd';
+		$('.layertwo').append(
+			'<svg height="2" width="30" class="water '+lineClass+'">'+
+			  '<polygon points="" class="waterline two"/>'+
+			'</svg>'
+		);
+	}
 
+	// Change shape of water lines (First layer)
+	anime({
+	  targets: '.waterline.one',
+	  points: [
+	  	{ value: [
+  			'0,1 50,0 50,2 -50,1',
+  			'0,0 50,1 50,1 -50,2']
+	  	},
+	    { value: '0,1 50,0 50,2 -50,1' },
+	  ],
+	  easing: 'easeOutQuad',
+	  duration: function() {
+	      return anime.random(1000, 2000);
+	    },
+	  delay: function() {
+	      return anime.random(100, 500);
+	    },
+	  direction: 'alternate',
+	  loop: true
+	});
 
-init();
-animate();
+	// Change shape of water lines (Second layer)
+	anime({
+	  targets: '.waterline.two',
+	  points: [
+	  	{ value: [
+  			'0,1 30,0 30,2 -30,1',
+  			'0,0 30,1 30,1 -30,2']
+	  	},
+	    { value: '0,1 30,0 30,2 -30,1' },
+	  ],
+	  easing: 'easeOutQuad',
+	  duration: 2000,
+	  delay: function() {
+	      return anime.random(100, 500);
+	    },
+	  direction: 'alternate',
+	  loop: true
+	});
 
+	function waterlines() {
+		// Change the color of water lines
+		$('.scene').each( function() {
+			($(this).hasClass('red'))? waterColor = '#EE5562': waterColor = '#96ccde';
+			var elID = $(this).attr('id');
+			
+			anime({
+			  targets: '#'+elID+' .sea svg',
+			  fill: ['transparent', waterColor],
+			  easing: 'easeOutQuad',
+			  duration: 25,
+			  loop: true,
+			});
+		})
+		
+		// Spread water lines (Which has class 'even') (First layer)
+		anime({
+		  targets: '.layerone svg.water.even',
+		  translateX: function() {
+		      return anime.random(-50, 50);
+		    },
+		  scaleX: function() {
+		      return anime.random(0, 2);
+		    },
+		  easing: 'easeOutQuad',
+		  duration: function() {
+		      return anime.random(300, 1000);
+		    },
+		});
 
-function init() {
-    scene = new THREE.Scene();
+		// Spread water lines (Which has class 'odd') (First layer)
+		anime({
+		  targets: '.layerone svg.water.odd',
+		  translateX: function() {
+		      return anime.random(100, -100);
+		    },
+		  scaleX: function() {
+		      return anime.random(0, 2);
+		   	},
+		  easing: 'easeOutQuad',
+		  duration: function() {
+		      return anime.random(300, 1000);
+		    },
+		});
 
-    camera = new THREE.PerspectiveCamera(55, window.innerWidth / window.innerHeight, 0.01, 1000)
-    camera.position.set(0,0,230);
+		// Spread water lines (Which has class 'even') (Second layer)
+		anime({
+		  targets: '.layertwo svg.water.even',
+		  translateX: function() {
+		      return anime.random(-25, 50);
+		    },
+		  scale: function() {
+		      return anime.random(0, 1);
+		    },
+		  easing: 'easeInSine',
+		  duration: function() {
+		      return anime.random(300, 1000);
+		    },
+		  delay: function() {
+		      return anime.random(100, 500);
+		    },
+		});
 
-    const directionalLight = new THREE.DirectionalLight("#fff", 2);
-    directionalLight.position.set(0, 50, -20);
-    scene.add(directionalLight);
+		// Spread water lines (Which has class 'odd') (Second layer)
+		anime({
+		  targets: '.layertwo svg.water.odd',
+		  translateX: function() {
+		      return anime.random(75, -50);
+		    },
+		  scale: function() {
+		      return anime.random(0, 1);
+		   	},
+		  easing: 'easeInSine',
+		  duration: function() {
+		      return anime.random(300, 1000);
+		    },
+		  delay: function() {
+		      return anime.random(100, 700);
+		    },
+		});
+	}
 
-    let ambientLight = new THREE.AmbientLight("#ffffff", 1);
-    ambientLight.position.set(0, 20, 20);
-    scene.add(ambientLight);
+	waterlines();
 
-    renderer = new THREE.WebGLRenderer({
-        antialias: true,
-        alpha: true
-    });
-    renderer.setSize(container.clientWidth, container.clientHeight);
-    renderer.setPixelRatio(window.devicePixelRatio);
-    container.appendChild(renderer.domElement);
+	// Change moon
+	$('body').click( function() {
+		
+		setTimeout(function() {
+			$('.scene').toggleClass('red blue');
+			waterlines();
+		}, 400);
 
-    //OrbitControl
-    controls = new THREE.OrbitControls(camera, renderer.domElement);
-    controls.autoRotate = true;
-    controls.autoRotateSpeed = 4;
-    controls.maxDistance = 350;
-    controls.minDistance = 150;
-    controls.enablePan = false;
+		var tl_1 = anime.timeline();
 
-    const loader = new THREE.TextureLoader();
-    const textureSphereBg = loader.load('https://i.ibb.co/4gHcRZD/bg3-je3ddz.jpg');
-    const texturenucleus = loader.load('https://i.ibb.co/hcN2qXk/star-nc8wkw.jpg');
-    const textureStar = loader.load("https://i.ibb.co/ZKsdYSz/p1-g3zb2a.png");
-    const texture1 = loader.load("https://i.ibb.co/F8by6wW/p2-b3gnym.png");  
-    const texture2 = loader.load("https://i.ibb.co/yYS2yx5/p3-ttfn70.png");
-    const texture4 = loader.load("https://i.ibb.co/yWfKkHh/p4-avirap.png");
+		tl_1
+		.add({
+		  targets: '.sky svg',
+		  translateY: [{ value: 250, duration: 500, easing: 'easeOutExpo' }],
+		  zIndex: [{ value: 0, duration: 1 }],
+		})
+		.add({
+		  targets: '.sky svg',
+		  translateY: [{ value: 0, duration: 800, easing: 'easeOutBack' }],
+		  zIndex: [{ value: 1, duration: 1, delay: 200 }],
+		})
 
+		var tl_2 = anime.timeline();
 
-    /*  Nucleus  */   
-    texturenucleus.anisotropy = 16;
-    let icosahedronGeometry = new THREE.IcosahedronGeometry(30, 10);
-    let lambertMaterial = new THREE.MeshPhongMaterial({ map: texturenucleus });
-    nucleus = new THREE.Mesh(icosahedronGeometry, lambertMaterial);
-    scene.add(nucleus);
+		tl_2
+		.add({
+		  targets: '.craters',
+		  translateY: [{ value: 250, duration: 500, easing: 'easeOutExpo' }],
+		  zIndex: [{ value: 0, duration: 1, delay: 60 }],
+		})
+		.add({
+		  targets: '.craters',
+		  translateY: [{ value: 0, duration: 800, easing: 'easeOutBack' }],
+		  zIndex: [{ value: 2, duration: 1, delay: 150 }],
+		})
 
+		anime({
+		  targets: '.layerone svg.water',
+		  translateX: 0,
+		  scaleX: 0,
+		  easing: 'cubicBezier(0,1.11,.79,1)',
+		  duration: 500
+		})
+		
+		anime({
+		  targets: '.layertwo svg.water',
+		  translateX: 0,
+		  scale: 0,
+		  easing: 'cubicBezier(0,1.11,.79,1)',
+		  duration: 500
+		})
 
-    /*    Sphere  Background   */
-    textureSphereBg.anisotropy = 16;
-    let geometrySphereBg = new THREE.SphereBufferGeometry(150, 40, 40);
-    let materialSphereBg = new THREE.MeshBasicMaterial({
-        side: THREE.BackSide,
-        map: textureSphereBg,
-    });
-    sphereBg = new THREE.Mesh(geometrySphereBg, materialSphereBg);
-    scene.add(sphereBg);
+		var tl_3 = anime.timeline({
+			easing: 'easeOutExpo'
+		});
 
+		tl_3
+		.add({
+		  targets: '.title',
+		  scaleY: 0,
+		  duration: 400
+		})
+		.add({
+		  targets: '.title',
+		  scaleY: 1,
+		  duration: 700
+		})
 
-    /*    Moving Stars   */
-    let starsGeometry = new THREE.Geometry();
-
-    for (let i = 0; i < 50; i++) {
-        let particleStar = randomPointSphere(150); 
-
-        particleStar.velocity = THREE.MathUtils.randInt(50, 200);
-
-        particleStar.startX = particleStar.x;
-        particleStar.startY = particleStar.y;
-        particleStar.startZ = particleStar.z;
-
-        starsGeometry.vertices.push(particleStar);
-    }
-    let starsMaterial = new THREE.PointsMaterial({
-        size: 5,
-        color: "#ffffff",
-        transparent: true,
-        opacity: 0.8,
-        map: textureStar,
-        blending: THREE.AdditiveBlending,
-    });
-    starsMaterial.depthWrite = false;  
-    stars = new THREE.Points(starsGeometry, starsMaterial);
-    scene.add(stars);
-
-
-    /*    Fixed Stars   */
-    function createStars(texture, size, total) {
-        let pointGeometry = new THREE.Geometry();
-        let pointMaterial = new THREE.PointsMaterial({
-            size: size,
-            map: texture,
-            blending: THREE.AdditiveBlending,                      
-        });
-
-        for (let i = 0; i < total; i++) {
-            let radius = THREE.MathUtils.randInt(149, 70); 
-            let particles = randomPointSphere(radius);
-            pointGeometry.vertices.push(particles);
-        }
-        return new THREE.Points(pointGeometry, pointMaterial);
-    }
-    scene.add(createStars(texture1, 15, 20));   
-    scene.add(createStars(texture2, 5, 5));
-    scene.add(createStars(texture4, 7, 5));
-
-
-    function randomPointSphere (radius) {
-        let theta = 2 * Math.PI * Math.random();
-        let phi = Math.acos(2 * Math.random() - 1);
-        let dx = 0 + (radius * Math.sin(phi) * Math.cos(theta));
-        let dy = 0 + (radius * Math.sin(phi) * Math.sin(theta));
-        let dz = 0 + (radius * Math.cos(phi));
-        return new THREE.Vector3(dx, dy, dz);
-    }
-}
-
-
-function animate() {
-
-    //Stars  Animation
-    stars.geometry.vertices.forEach(function (v) {
-        v.x += (0 - v.x) / v.velocity;
-        v.y += (0 - v.y) / v.velocity;
-        v.z += (0 - v.z) / v.velocity;
-
-        v.velocity -= 0.3;
-
-        if (v.x <= 5 && v.x >= -5 && v.z <= 5 && v.z >= -5) {
-            v.x = v.startX;
-            v.y = v.startY;
-            v.z = v.startZ;
-            v.velocity = THREE.MathUtils.randInt(50, 300);
-        }
-    });
-
-
-    //Nucleus Animation
-    nucleus.geometry.vertices.forEach(function (v) {
-        let time = Date.now();
-        v.normalize();
-        let distance = nucleus.geometry.parameters.radius + noise.noise3D(
-            v.x + time * 0.0005,
-            v.y + time * 0.0003,
-            v.z + time * 0.0008
-        ) * blobScale;
-        v.multiplyScalar(distance);
-    })
-    nucleus.geometry.verticesNeedUpdate = true;
-    nucleus.geometry.normalsNeedUpdate = true;
-    nucleus.geometry.computeVertexNormals();
-    nucleus.geometry.computeFaceNormals();
-    nucleus.rotation.y += 0.002;
-
-
-    //Sphere Beckground Animation
-    sphereBg.rotation.x += 0.002;
-    sphereBg.rotation.y += 0.002;
-    sphereBg.rotation.z += 0.002;
-
-    
-    controls.update();
-    stars.geometry.verticesNeedUpdate = true;
-    renderer.render(scene, camera);
-    requestAnimationFrame(animate);
-}
-
-
-
-/*     Resize     */
-window.addEventListener("resize", () => {
-    clearTimeout(timeout_Debounce);
-    timeout_Debounce = setTimeout(onWindowResize, 80);
+		setTimeout(function() {
+			($('.title').text() == "Crimson Moon") ? title = 'Blue Moon': title = 'Crimson Moon';
+			$('.title').text(title);
+			waterlines();
+		}, 400);
+	})
 });
-function onWindowResize() {
-    camera.aspect = container.clientWidth / container.clientHeight;
-    camera.updateProjectionMatrix();
-    renderer.setSize(container.clientWidth, container.clientHeight);
-}
+  </script>
 
-
-
-//      Fullscreen btn     */
-//  let fullscreen;
-//  let fsEnter = document.getElementById('fullscr');
-//  fsEnter.addEventListener('click', function (e) {
-//      e.preventDefault();
-//      if (!fullscreen) {
-//          fullscreen = true;
-//         document.documentElement.requestFullscreen();
-//          fsEnter.innerHTML = "Exit Fullscreen";
-//     }
-//      else {
-//          fullscreen = false;
-//          document.exitFullscreen();
-//          fsEnter.innerHTML = "Go Fullscreen";
-//     }
-//  });
-</script>
   
 </body>
 
