--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -313,6 +313,26 @@ input:checked + .slider:before {
   color: #4f547b;
 }
 
+.memory_input select {
+  position: relative;
+  margin-top: 10px;
+  padding: 0px 20px;
+  width: 100%;
+  height: 55px;
+  display: flex;
+  border: none;
+  background: #f7f7f7;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+
+  font-family: "GT Walsheim Pro";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 26px;
+  color: #4f547b;
+}
+
 .img_frame {
   position: relative;
   width: 100%;
