--- a/views/brand-menu.ejs
+++ b/views/brand-menu.ejs
@@ -228,7 +228,7 @@
       const image_class_name = input.className;
       const file = $(`.${image_class_name}`).get(0).files[0],
       fileType = file['type'],
-      validImageTypes = ['image/jpg', 'image/jpeg', 'image/png', 'image/webp'];
+      validImageTypes = ['image/jpg', 'image/jpeg', 'image/png', 'image/webp', 'image/svg'];
 
       if(!validImageTypes.includes(fileType)) {
         alert(`Please upload in allowed formats: jpg, jpeg, png, webp`);
