feat: added new poduct category

--- a/views/brand-menu.ejs
+++ b/views/brand-menu.ejs
@@ -94,6 +94,8 @@
               <option value="mouse">Mouse</option>
               <option value="headset">headset</option>
               <option value="earphone">earphone</option>
+              <option value="earphone">monitor</option>
+              <option value="earphone">laptop</option>
               <option value="etc">other</option>
             </select>
           </div>
